# Wiley-Widget

./: # Wiley Widget View Completion Punc.txt  $profile  .ai-manifest-config.json  .ai-manifest-config.json.example  .checkov.yaml  .config-lock.json  .copilot-instructions-new.md  .copilot-instructions.md  .dockerignore  .editorconfig  .env  .env.busbuddy-template  .env.example  .env.mssql.example  .env.template  .env.wiley-widget  .format-report.json  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint.json  .mcp-config-status.md  .pre-commit-config.yaml  .prettierignore  .prettierrc  .syncfusion.license.synced  .todo  .trunkignore  AI-BRIEF.md  AICHAT_INTEGRATION_SUMMARY.md  APPLICATION_SEPARATION_GUIDE.md  AZD_KEYVAULT_SETUP_GUIDE.md  AZURE_KEYVAULT_LOCKED_CONFIG.md  AZURE_SECRETS_ANALYSIS.md  AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  App.DependencyInjection.cs  App.config  App.xaml  (+230 more)
.agents/: # UIUX Visual Review Prompt Templat.md
.config/: dotnet-tools.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOW_CLEANUP.md  WORKFLOW_CLEANUP_ANSWER.md  copilot-instructions.md  merge-queue-schema.yaml  pull_request_template.md
.scripts/: dump-xamlpages.ps1
.trash/: MainWindow.xaml  MainWindow.xaml.cs  QuickBooksBudget.duplicate.cs  deleted-tmp-run-build-winforms.ps1
.trunk/: analytics-config.yaml  setup-ci  trunk.yaml
Configuration/: DatabaseConfiguration.cs  ExternalApiHealthCheck.cs  HealthMonitoringService.cs  LicenseKey.Private.sample.cs  WpfMiddleware.cs
Converters/: ApiKeyValidationRule.cs  BoolToVisibilityConverter.cs  BoolToVisibilityInverseConverter.cs  ColorToBrushConverter.cs  CurrencyConverter.cs  DashboardConverters.cs  NumberToColorConverter.cs  PercentageConverter.cs  PositiveNegativeColorConverter.cs  StringToBrushConverter.cs
Data/: AppDbContext.cs  AppDbContextFactory.cs  DatabaseSeeder.cs
Diagnostics/: StartupDiagnostics.cs
Fast Report/: readme.md
MSBuild_Logs/: MSBuild_CommTrace_PID_15712.txt  MSBuild_CommTrace_PID_21836.txt  MSBuild_CommTrace_PID_6932.txt  MSBuild_CommTrace_PID_8488.txt
Migrations/: 20250829235428_InitialCreate.Designer.cs  20250829235428_InitialCreate.cs  20250830012453_AddQboFields.Designer.cs  20250830012453_AddQboFields.cs  20250830022925_UpdateModelChanges.Designer.cs  20250830022925_UpdateModelChanges.cs  (+5 more)
(+5222 files in other folders)
